@@ -1,3 +1,8 @@
+2007-03-21  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/textdoccol.R (sFilter): Simplified sFilter significantly by
+	using prescindMeta().
+
 2007-03-18  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/textdoccol.R: Improved database support.
